[gd_scene load_steps=46 format=3 uid="uid://crj0elc3jro0b"]

[ext_resource type="Script" uid="uid://dtgma7gux8j8n" path="res://Assets/Scenes/Enemies Scene/Magic book/magic_book.gd" id="1_l31mw"]
[ext_resource type="Texture2D" uid="uid://fitohyaxtqx1" path="res://Assets/sprites/enemies/Magic book/Libro_Magic_idle.png" id="2_pmo3c"]
[ext_resource type="Texture2D" uid="uid://ba22hsxonosdd" path="res://Assets/sprites/enemies/Magic book/Libro_Magic_Invocacion.png" id="3_c8kbi"]
[ext_resource type="Texture2D" uid="uid://b4sd8y0oqxaq7" path="res://Assets/sprites/enemies/Magic book/Libro_fin_attack.png" id="4_g5vxq"]
[ext_resource type="Texture2D" uid="uid://ci107xa0yj607" path="res://Assets/sprites/enemies/Magic book/Libro_death.png" id="5_9j0g7"]
[ext_resource type="Texture2D" uid="uid://c7h5vov0s3ppk" path="res://Assets/sprites/enemies/Magic book/Ataque en curso.png" id="6_gxt1m"]
[ext_resource type="FontFile" uid="uid://dhhjcp1rxp6gj" path="res://Assets/Fonts/minecraft_font.ttf" id="7_sbu23"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5cdf5"]
atlas = ExtResource("3_c8kbi")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlbae"]
atlas = ExtResource("3_c8kbi")
region = Rect2(225, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbu23"]
atlas = ExtResource("3_c8kbi")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndy6r"]
atlas = ExtResource("3_c8kbi")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfodx"]
atlas = ExtResource("3_c8kbi")
region = Rect2(225, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahsbj"]
atlas = ExtResource("3_c8kbi")
region = Rect2(450, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgus4"]
atlas = ExtResource("6_gxt1m")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxwp3"]
atlas = ExtResource("6_gxt1m")
region = Rect2(225, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsmit"]
atlas = ExtResource("6_gxt1m")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkoek"]
atlas = ExtResource("6_gxt1m")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4fvu"]
atlas = ExtResource("6_gxt1m")
region = Rect2(225, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp3r1"]
atlas = ExtResource("6_gxt1m")
region = Rect2(450, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqy8k"]
atlas = ExtResource("4_g5vxq")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv5u3"]
atlas = ExtResource("4_g5vxq")
region = Rect2(225, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d7jf"]
atlas = ExtResource("4_g5vxq")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6hpd"]
atlas = ExtResource("4_g5vxq")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_koi6c"]
atlas = ExtResource("4_g5vxq")
region = Rect2(225, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_71ocw"]
atlas = ExtResource("4_g5vxq")
region = Rect2(450, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o85o"]
atlas = ExtResource("5_9j0g7")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2ywp"]
atlas = ExtResource("5_9j0g7")
region = Rect2(225, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2wt4"]
atlas = ExtResource("5_9j0g7")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_uknyq"]
atlas = ExtResource("5_9j0g7")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri5y7"]
atlas = ExtResource("5_9j0g7")
region = Rect2(225, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_g47c3"]
atlas = ExtResource("5_9j0g7")
region = Rect2(450, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_my8fe"]
atlas = ExtResource("2_pmo3c")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_8222r"]
atlas = ExtResource("2_pmo3c")
region = Rect2(225, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikwb8"]
atlas = ExtResource("2_pmo3c")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdyv2"]
atlas = ExtResource("2_pmo3c")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccmb7"]
atlas = ExtResource("2_pmo3c")
region = Rect2(0, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_jugrp"]
atlas = ExtResource("2_pmo3c")
region = Rect2(450, 0, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrqrl"]
atlas = ExtResource("2_pmo3c")
region = Rect2(0, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vdq3"]
atlas = ExtResource("2_pmo3c")
region = Rect2(225, 184, 225, 184)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn4pk"]
atlas = ExtResource("2_pmo3c")
region = Rect2(450, 184, 225, 184)

[sub_resource type="SpriteFrames" id="SpriteFrames_vuxy1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cdf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlbae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbu23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndy6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfodx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahsbj")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgus4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxwp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsmit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkoek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4fvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp3r1")
}],
"loop": true,
"name": &"attack_continue",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqy8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv5u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d7jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6hpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koi6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71ocw")
}],
"loop": false,
"name": &"attack_finish",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o85o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2ywp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2wt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uknyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri5y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g47c3")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my8fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8222r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikwb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdyv2")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccmb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jugrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrqrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vdq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn4pk")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(42, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(40, 46)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_detect"]
radius = 69.0
height = 484.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndy6r"]
bg_color = Color(0.835718, 1.73271e-06, 4.81307e-07, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="MagicBook" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 11
script = ExtResource("1_l31mw")
max_health = 120

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_vuxy1")
animation = &"walk"
frame = 4
frame_progress = 0.788627

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_body")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy_hitbox"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_hitbox")

[node name="Sensors" type="Node2D" parent="."]

[node name="FloorCheck" type="RayCast2D" parent="Sensors"]
position = Vector2(0, 12)
target_position = Vector2(0, 80)

[node name="EdgeCheck" type="RayCast2D" parent="Sensors"]
position = Vector2(52, 12)
target_position = Vector2(52, 94)

[node name="WallCheck" type="RayCast2D" parent="Sensors"]
target_position = Vector2(48, 0)

[node name="DetectionZone" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_detect")

[node name="Timers" type="Node" parent="."]

[node name="CastTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FinishTimer" type="Timer" parent="Timers"]
wait_time = 0.7
one_shot = true

[node name="CooldownTimer" type="Timer" parent="Timers"]
wait_time = 2.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = -41.0
offset_right = 28.0
offset_bottom = -35.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ndy6r")
max_value = 80.0
value = 80.0
show_percentage = false

[node name="HealthBarNumber" type="Label" parent="."]
offset_left = -20.0
offset_top = -63.0
offset_right = 20.0
offset_bottom = -40.0
theme_override_fonts/font = ExtResource("7_sbu23")
